--- a/portfolio/src/Styling/Header.css
+++ b/portfolio/src/Styling/Header.css
@@ -12,7 +12,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 15px 5%;
-  background-color: #263874;
+  background-color: #0b132b;
   color: white;
 }
 
